Implement display and buttons
Implemented numbears appearing on "display" when
pressed.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="display"></div>
+    <div id="container">
+        <button id="0" class="number">0</button>
+        <button id="1" class="number">1</button>
+        <button id="2" class="number">2</button>
+        <button id="3" class="number">3</button>
+        <button id="4" class="number">4</button>
+        <button id="5" class="number">5</button>
+        <button id="6" class="number">6</button>
+        <button id="7" class="number">7</button>
+        <button id="8" class="number">8</button>
+        <button id="9" class="number">9</button>
+        <button id="add" class="operand">+</button>
+        <button id="subtract" class="operand">-</button>
+        <button id="multiply" class="operand">*</button>
+        <button id="divide" class="operand">/</button>
+        <button id="clear" class="operand">C</button>
+    </div>
+
+
     
 </body>
 </html>
