Fix getoperandsandoperator function

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button id="divide" class="operand">/</button>
         <button id="clear" class="operand">C</button>
     </div>
+    <div id="result"></div>
 
 
     
