--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="subtract" class="operand">-</button>
         <button id="multiply" class="operand">*</button>
         <button id="divide" class="operand">/</button>
-        <button id="clear" class="operand">C</button>
+        <button id="clear">C</button>
     </div>
     <div id="result"></div>
 
