--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="javascript.js" defer></script>
+    <script src="java.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,6 +24,7 @@
         <button id="subtract" class="operand">-</button>
         <button id="multiply" class="operand">*</button>
         <button id="divide" class="operand">/</button>
+        <button id="equal">=</button>
         <button id="clear">C</button>
     </div>
     <div id="result"></div>
